# Pierogi2D

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: CMakeLists.txt  main.cpp
src/pierogi/: CMakeLists.txt  dependency_map.txt  p2d.hpp  p2d_clock.cpp  p2d_clock.hpp  p2d_compiletimeconstants.hpp  p2d_glwindow.cpp  p2d_glwindow.hpp  p2d_instance.cpp  p2d_instance.hpp  p2d_object.cpp  p2d_object.hpp  p2d_typedefs.hpp  p2d_viewport.cpp  p2d_viewport.hpp  p2d_window.cpp  p2d_window.hpp
src/pierogi/debug/: CMakeLists.txt  p2d_debug.hpp  p2d_field.cpp  p2d_field.hpp  p2d_logger.cpp  p2d_logger.hpp
src/pierogi/graphics/: CMakeLists.txt  p2d_drawable.hpp  p2d_graphics.cpp  p2d_graphics.hpp  p2d_rect.hpp
src/pierogi/graphics/sprite/: p2d_frame.hpp  p2d_framesequence.hpp
src/pierogi/input/: CMakeLists.txt  p2d_event.cpp  p2d_event.hpp  p2d_eventhandler.cpp  p2d_eventhandler.hpp  p2d_mouse.hpp  p2d_mouseeventhandler.cpp  p2d_mouseeventhandler.hpp  p2d_mousestate.cpp  p2d_mousestate.hpp
src/pierogi/input/keyboard/: p2d_keyboard.hpp
src/pierogi/input/mouse/: p2d_mouse.hpp  p2d_mouseeventhandler.cpp  p2d_mouseeventhandler.hpp  p2d_mousestate.cpp  p2d_mousestate.hpp
src/pierogi/math/: CMakeLists.txt  p2d_math.cpp  p2d_math.hpp  p2d_vector.cpp  p2d_vector.hpp  p2d_vector2.hpp  p2d_vector3.hpp
src/pierogi/utility/: CMakeLists.txt  p2d_circularbuffer.hpp  p2d_pool.hpp  p2d_quadtree.hpp  p2d_quadtreenode.hpp  p2d_rect.hpp  p2d_stringutils.cpp  p2d_stringutils.hpp  p2d_utility.hpp  quadtreenode.hpp
test/ut/: CMakeLists.txt  test_p2d_circularbuffer.cpp  test_p2d_quadtree.cpp  test_p2d_rect.cpp  test_p2d_vector.cpp  test_trivial.cpp
